Fix mobile horizontal scroll issue

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -28,7 +28,7 @@ $border-color: rgba(255, 255, 255, 0.08);
     content: '';
     position: absolute;
     top: -200px;
-    right: -200px;
+    right: 0;
     width: 500px;
     height: 500px;
     background: radial-gradient(circle, rgba($accent, 0.08) 0%, transparent 70%);
