--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -238,7 +238,7 @@ $text-muted: #a1a1aa;
 
       &.badge-2 {
         bottom: 60px;
-        right: -15px;
+        right: 0;
         animation-delay: 2s;
       }
     }
